--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -33,11 +33,6 @@
     border-radius: 1rem;
 }
 
-.allEpisodes{
-    color: black;
-
-}
-
 .episodeDetails{
     flex: 1;
     margin-left: 1rem;
@@ -117,5 +112,79 @@
 }
 
 .buttonPlay:hover{
+    filter: brightness(0.9);
+}
+
+.allEpisodes{
+    padding-bottom: 2rem;
+
+}
+
+.allEpisodes table{
+    width: 100%;
+}
+
+.allEpisodes td {
+
+    padding: 0.75rem 1rem;
+    border-bottom: 1px solid var(--gray-100);
+
+}
+
+.allEpisodes th {
+
+    padding: 0.75rem 1rem;
+    border-bottom: 1px solid var(--gray-100);
+
+}
+
+.allEpisodes th {
+    color: var(--gray-200);
+    text-transform: uppercase;
+    font: 500 0.75rem Lexend, sans-serif;
+    text-align: left;
+}
+
+.allEpisodes td {
+    font-size: 0.875rem;
+}
+
+.epiIMG {
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 0.5rem;
+
+}
+
+.allEpisodes td a {
+    color: var(--gray-800);
+    font-family: Lexend, sans-serif;
+    font-weight: 600;
+    text-decoration: none;
+    line-height: 1.4rem;
+    font-size: 1rem;
+}
+
+.allEpisodes td a:hover{
+    text-decoration: underline;
+}
+
+.buttonPlayM {
+
+    width: 2rem;
+    height: 2rem;
+    background: var(--white);
+    border: 1px solid var(--gray-100);
+    border-radius: 0.5rem;
+
+    transition: filter 0.4s;
+}
+
+.miniPlay {
+    width: 1.25rem;
+    height: 1.25rem;
+}
+
+.buttonPlayM:hover{
     filter: brightness(0.9);
 }
