--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -2,6 +2,8 @@
     padding: 0.4rem;
     height: calc(100vh - 6.5rem);
     overflow-y: scroll;
+    padding-left: 4rem;
+    padding-right: 4rem;
 }
 
 .homepage h2 {
